update some stuff

--- a/code/matlab/2d-lrf/setup/setup.tex
+++ b/code/matlab/2d-lrf/setup/setup.tex
@@ -1,29 +1,34 @@
 \documentclass{minimal}
 
 \usepackage{tikz}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsfonts}
 
 \begin{document}
 
 \pagestyle{empty}
 
-\begin{tikzpicture}
+\begin{tikzpicture}[]
   % styles
   \tikzstyle{axes}=[]
   \tikzstyle{robot} = []
   \tikzstyle{wheels} = [fill]
   \tikzstyle{landmark} = [fill]
+  \tikzstyle{lrf measurement} = [densely dashed]
+  \colorlet{anglecolor}{green!50!black}
 
   % world axes
   \begin{scope}[style = axes]
-    \draw[->] (-1.5, 0) -- (5, 0);
-    \draw[->] (0, -1.5) -- (0, 5);
+    \draw[->] (-0.1, 0) -- (5, 0);
+    \draw[->] (0, -0.1) -- (0, 5);
   \end{scope}
 
   % robot base
   \begin{scope}[style = robot, xshift = 2cm, yshift = 2cm, rotate = 45]
-    \draw (0, 0) circle (0.25);
-    \draw[wheels] (-0.1, 0.25) rectangle (0.1, 0.3);
-    \draw[wheels] (-0.1, -0.25) rectangle (0.1, -0.3);
+    \draw (0, 0) circle (1);
+    \draw[wheels] (-0.5, 1) rectangle (0.5, 1.1);
+    \draw[wheels] (-0.5, -1) rectangle (0.5, -1.1);
   \end{scope}
 
   % robot axes
@@ -33,86 +38,45 @@
   \end{scope}
 
   % lrf axes
-  \begin{scope}[style = axes, xshift = 2.1cm, yshift = 2.21cm, rotate = 60]
-    \draw[->] (0, 0) -- (0.5, 0);
-    \draw[->] (0, 0) -- (0, 0.5);
+  \begin{scope}[style = axes, xshift = 2.3cm, yshift = 2.95cm, rotate = 60]
+    \draw[->] (0, 0) -- (2, 0);
+    \draw[->] (0, 0) -- (0, 1);
   \end{scope}
 
   % landmark
   \begin{scope}[style = landmark, xshift = 1.8cm, yshift = 5cm, rotate = 0]
-    \draw[landmark] (0, 0) circle (0.1);
+    \draw[landmark] (0, 0) circle (0.05) node[above] {$\boldsymbol{\ell}_i$};
+  \end{scope}
+
+  % lrf range measurement
+  \begin{scope}[style = lrf measurement]
+    \draw (2.3, 2.95) -- (1.8, 5) node[left = 0.1cm, below = 0.5cm] {$r^i_k$};
+  \end{scope}
+
+  % lrf bearing measurement
+  \begin{scope}[xshift = 2.3cm, yshift = 2.95cm, rotate = 60]
+    \filldraw[fill = green!20, draw = anglecolor] (0, 0) -- (8.5mm, 0) arc
+      (0:44:8.5mm) -- cycle;
+    \draw (22:6mm) node[anglecolor] {$\phi^i_k$};
+  \end{scope}
+
+  % robot pose
+  \begin{scope}
+    \draw[densely dashed] (2, 0) node[below] {$x_k$} -- (2, 2);
+    \draw[densely dashed] (0, 2) node[left] {$y_k$} -- (4, 2);
+    \filldraw[fill = green!20, draw = anglecolor] (2, 2) -- (2.8, 2) arc
+      (0:45:0.8) -- cycle;
+    \draw[xshift = 2cm, yshift = 2cm] (22.5:0.5) node[anglecolor] {$\theta_k$};
+  \end{scope}
+
+  % lrf pose
+  \begin{scope} [xshift = 2cm, yshift = 2cm, rotate = 45]
+    \draw[densely dashed] (0.9, 0) node[below = -1pt, right = 5pt] {$\delta_x$} -- (0.9, 0.45);
+    \draw[densely dashed] (0, 0.45) node[left = 3pt, below = -5pt] {$\delta_y$} -- (3, 0.45);
+    \filldraw[fill = green!20, draw = anglecolor] (0.9, 0.45) -- (2.5, 0.45) arc
+      (0:14.8:1.6) -- cycle;
+    \draw[xshift = 0.9cm, yshift = 0.45cm] (7:1.2) node[anglecolor] {$\psi$};
   \end{scope}
 
 \end{tikzpicture}
-%\begin{tikzpicture}[scale=3, cap=round]
-%  \def\costhirty{0.8660256}
-
-%  \colorlet{anglecolor}{green!50!black}
-%  \colorlet{sincolor}{red}
-%  \colorlet{tancolor}{orange!80!black}
-%  \colorlet{coscolor}{blue}
-
-%  \tikzstyle{axes}=[]
-%  \tikzstyle{important line}=[very thick]
-%  \tikzstyle{information text}=[rounded corners,fill=red!10,inner sep=1ex]
-
-%  \draw[style=help lines,step=0.5cm] (-1.4,-1.4) grid (1.4,1.4);
-
-%  \draw (0,0) circle (1cm);
-
-%  \begin{scope}[style=axes]
-%    \draw[->] (-1.5,0) -- (1.5,0) node[right] {$x$};
-%    \draw[->] (0,-1.5) -- (0,1.5) node[above] {$y$};
-
-%    \foreach \x/\xtext in {-1, -.5/-\frac{1}{2}, 1}
-%      \draw[xshift=\x cm] (0pt,1pt) -- (0pt,-1pt) node[below,fill=white]
-%            {$\xtext$};
-
-%    \foreach \y/\ytext in {-1, -.5/-\frac{1}{2}, .5/\frac{1}{2}, 1}
-%      \draw[yshift=\y cm] (1pt,0pt) -- (-1pt,0pt) node[left,fill=white]
-%            {$\ytext$};
-%  \end{scope}
-
-%  \filldraw[fill=green!20,draw=anglecolor] (0,0) -- (3mm,0pt) arc(0:30:3mm);
-%  \draw (15:2mm) node[anglecolor] {$\alpha$};
-
-%  \draw[style=important line,sincolor]
-%    (30:1cm) -- node[left=1pt,fill=white] {$\sin \alpha$} +(0,-.5);
-
-%  \draw[style=important line,coscolor]
-%    (0,0) -- node[below=2pt,fill=white] {$\cos \alpha$} (\costhirty,0);
-
-%  \draw[style=important line,tancolor] (1,0) --
-%    node [right=1pt,fill=white]
-%    {
-%      $\displaystyle \tan \alpha \color{black}=
-%      \frac{{\color{sincolor}\sin \alpha}}{\color{coscolor}\cos \alpha}$
-%    } (intersection of 0,0--30:1cm and 1,0--1,1) coordinate (t);
-
-%  \draw (0,0) -- (t);
-
-%  \draw[xshift=1.85cm] node [right,text width=6cm,style=information text]
-%    {
-%      The {\color{anglecolor} angle $\alpha$} is $30^\circ$ in the
-%      example ($\pi/6$ in radians). The {\color{sincolor}sine of
-%        $\alpha$}, which is the height of the red line, is
-%      \[
-%      {\color{sincolor} \sin \alpha} = 1/2.
-%      \]
-%      By the Theorem of Pythagoras we have ${\color{coscolor}\cos^2 \alpha} +
-%      {\color{sincolor}\sin^2\alpha} =1$. Thus the length of the blue
-%      line, which is the {\color{coscolor}cosine of $\alpha$}, must be
-%      \[
-%      {\color{coscolor}\cos\alpha} = \sqrt{1 - 1/4} = \textstyle
-%      \frac{1}{2} \sqrt 3.
-%      \]%
-%      This shows that {\color{tancolor}$\tan \alpha$}, which is the
-%      height of the orange line, is
-%      \[
-%      {\color{tancolor}\tan\alpha} = \frac{{\color{sincolor}\sin
-%          \alpha}}{\color{coscolor}\cos \alpha} = 1/\sqrt 3.
-%      \]%
-%    };
-%\end{tikzpicture}
-
 \end{document}
