--- a/papers/icra13/src/experiments.tex
+++ b/papers/icra13/src/experiments.tex
@@ -24,7 +24,7 @@ heterogeneous sensors or 3D motion.
 \label{fig:exp_setup}
 \end{figure}
 
-More formally, we use the following motion and observation models
+More formally, we adopt the following motion and observation models
 
 \begin{equation}\label{eqn:exp_model}
   \begin{aligned}
