small mistake in the paper

--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -243,7 +243,7 @@ covariance estimate without inverting the whole FIM
   \sigma_{ll} &= \frac{1}{r_{ll}}(\frac{1}{r_{ll}} -
     \sum_{j = l + 1, r_{lj}\neq 0}^n r_{lj}\sigma_{jl})\\
   \sigma_{il} &= \frac{1}{r_{ii}}
-    (-\sum_{j = i + 1, r_{ij}\neq 0}^n r_{ij}\sigma_{jl} -
+    (-\sum_{j = i + 1, r_{ij}\neq 0}^l r_{ij}\sigma_{jl} -
     \sum_{j = l + 1, r_{ij}\neq 0}^n r_{ij}\sigma_{lj}),
   \end{aligned}
 \end{equation}
