--- a/papers/ivs13/src/related.tex
+++ b/papers/ivs13/src/related.tex
@@ -46,7 +46,7 @@ on an information theoretic quantity measuring point cloud quality.
 To the best of the authors' knowledge, little research has been devoted to
 efficiently deal with degenerate cases frequently occurring during calibration.
 The majority of the authors indeed assumes that their optimization routine runs
-on well-behaved data. As demonstrated in the next section, this can be a
+on well-behaved data. As demonstrated in the next sections, this can be a
 critical point in real-world scenarios. In contrast, our approach does not
 require any of these assumptions and is suitable for online, autonomous, and
 long-term operations on various platforms and sensors.
