--- a/papers/ivs13/src/model.tex
+++ b/papers/ivs13/src/model.tex
@@ -163,8 +163,8 @@ system
   \end{aligned}
 \end{equation}
 
-Thus, instead of directly solving \eqref{eqn:dx_update} which requires a
-significant amount of computation and introduces numerical errors, we can take
+\noindent Thus, instead of directly solving \eqref{eqn:dx_update} which requires
+a significant amount of computation and introduces numerical errors, we can take
 advantage of matrix decompositions.
 
 Let $\mathbf{L}\mathbf{H}$ be of size $m\times n$ with the following thin
@@ -179,10 +179,9 @@ Singular Value Decomposition (\emph{SVD}) decomposition~\cite{golub96matrix}
 \noindent where $\mathbf{U}_n$ is an $m\times n$ matrix with orthogonal columns,
 $\mathbf{S}_n=\diag(\sigma_1, \cdots,\sigma_n)$, $\mathbf{V}_n$ an $n\times n$
 matrix with orthogonal columns, and $\sigma_i$ are the
-singular values of $\mathbf{L}\mathbf{H}$.
-
-From \eqref{eqn:svd_decomposition} and using the orthogonality of
-$\mathbf{U}_n$ and $\mathbf{V}_n$, we can solve \eqref{eqn:dx_update} as
+singular values of $\mathbf{L}\mathbf{H}$. From \eqref{eqn:svd_decomposition}
+and using the orthogonality of $\mathbf{U}_n$ and $\mathbf{V}_n$, we can solve
+\eqref{eqn:dx_update} as
 
 \begin{equation}\label{eqn:dx_svd_solve}
   \begin{aligned}
@@ -209,9 +208,8 @@ $\mathbf{L}\mathbf{H}$
 \noindent where $\boldsymbol{\Pi}$ is a permutation matrix, $\mathbf{Q}_n$ an
 $m\times n$ matrix with orthogonal columns, and $\mathbf{R}_n$ an $n\times n$
 upper triangular matrix. In standard QR decomposition, $\boldsymbol{\Pi}$ is
-the identity matrix, otherwise it reflects column pivoting.
-
-From \eqref{eqn:qr_decomposition} and using the orthogonality of $\mathbf{Q}_n$,
+the identity matrix, otherwise it reflects column pivoting. From
+\eqref{eqn:qr_decomposition} and using the orthogonality of $\mathbf{Q}_n$,
 \eqref{eqn:dx_update} can be expressed as
 
 \begin{equation}\label{eqn:dx_qr_solve}
@@ -293,7 +291,7 @@ matrix $\mathbf{H}$ and using \eqref{eqn:covariance_QR},
 $\hat{\boldsymbol{\Sigma}}_{\boldsymbol{\Theta}\boldsymbol{\Theta}}$ can be
 computed in $\mathcal{O}(l)$, where $l=\card(\boldsymbol{\Theta})$.
 
-\subsection{Truncated SVD and QR Solutions}
+\subsection{Truncated SVD and QR Solutions}\label{sec:tsvd}
 
 There exists a solution to \eqref{eqn:dx_update}
 iff the FIM is invertible, i.e., it is \emph{full rank}. The rank of a
@@ -314,12 +312,13 @@ FIM might appear to be theoretically full rank although it is actually
   \end{aligned}
 \end{equation}
 
-Although $\mathbf{A}$ is technically full rank, it was constructed from a rank-
-deficient matrix (the second row is a linear combination of the first and the
-last row) with added Gaussian noise. In the following, we call $\mathbf{A}$
-a \emph{numerically rank-deficient} matrix. The issue of rank deficiency often
-appears in robotics state estimation and is related to the problem of
-\emph{observability} in control theory~\cite{jauffret07observability}.
+\noindent Although $\mathbf{A}$ is technically full rank, it was constructed
+from a structurally rank-deficient matrix (the second row is a linear
+combination of the first and the last row) with added Gaussian noise. In the
+following, we call $\mathbf{A}$ a \emph{numerically rank-deficient} matrix. The
+issue of rank deficiency often appears in robotics state estimation and is
+related to the problem of \emph{observability} in control
+theory~\cite{jauffret07observability}.
 
 Using SVD decomposition, we can identify a numerically rank-deficient matrix by
 analyzing its singular values \cite{hansen98rank}. The \emph{numerical rank}
@@ -360,8 +359,8 @@ It is worth noting that TSVD applies a \emph{sharp} filter to the system,
 whereas \emph{regularization} methods such as Tikhonov or ridge regression work
 as a \emph{smooth} filter. As shown in~\cite{hansen87truncated}, it nevertheless
 produces similar results at lower computational costs when the matrix has a
-well-determined numerical rank.
-\todo{maybe talk about over-fitting}
+well-determined numerical rank, i.e., a clearly defined jump in the singular
+values spectrum.
 
 A similar approach can be derived using \emph{rank-revealing} QR
 decomposition~\cite{hong92rank} yielding to the Truncated QR (TQR)
@@ -372,11 +371,41 @@ the $\mathbf{Q}$ matrix need not be explicitly constructed, but instead returned
 in the form of \emph{Householder} reflections that can be applied on the
 right-hand side of the linear system.
 
+According to the discussion in~\cite{golub96matrix}, \emph{column scaling} may
+improve the conditioning of the system, i.e. the ratio between the largest and
+the smallest singular value, and hence the stability of the solution. Within our
+framework, scaling is also relevant for merging quantities with miscellaneous
+magnitudes and helps in setting a rank tolerance $\epsilon$ that is widely
+applicable. We define the scaling matrix as
+
+\begin{equation}\label{eqn:scaling_matrix}
+  \begin{aligned}
+  \mathbf{G} &= \diag(\frac{1}{||\mathbf{L}\mathbf{H}(:,1)||},\cdots,
+    \frac{1}{||\mathbf{L}\mathbf{H}(:,n)||}),
+  \end{aligned}
+\end{equation}
+
+\noindent where $||\cdot||$ denotes the column vector norm, and compute a
+solution to the scaled system
+
+\begin{equation}\label{eqn:scaled_system}
+  \begin{aligned}
+  \mathbf{G}\mathbf{L}\mathbf{H}
+  \delta\hat{\boldsymbol{\mu}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}^{(s)}
+  &=
+  -\mathbf{L}\mathbf{e}(\mathbf{\hat{\boldsymbol{\mu}}_{
+  \boldsymbol{\Theta}\mathcal{X}\mathcal{L}}}).
+  \end{aligned}
+\end{equation}
+
+\noindent The unscaled solution is finally expressed as $\mathbf{G}
+\delta\hat{\boldsymbol{\mu}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}^{(s)}$.
+
 \subsection{Selecting Informative Measurements}
 
 Since we are mainly interested in calibrating our sensor and thus in the
 posterior $p(\boldsymbol{\Theta}\mid\mathcal{U},\mathcal{Z})$, we do not need
-to consider all measurements. Let us define a partition of the measurements
+to consider all the measurements. Let us define a partition of the measurements
 $\mathcal{D}_1=\{\mathbf{u}_{1:i}, \mathbf{z}_{1_{1:N}:i_{1:N}}\}$ and
 $\mathcal{D}_2=\{\mathbf{u}_{i+1:K}, \mathbf{z}_{i+1_{1:N}:K_{1:N}}\}$ with
 $i<K$. Using information theory, we can quantify the information gain when
@@ -394,7 +423,7 @@ variables $\mathbf{X}$ and $\mathbf{Y}$ is defined as
 \end{equation}
 
 \noindent where $p(x, y)$ is the joint density of $\mathbf{X}$ and $\mathbf{Y}$,
-and $p(x)$ and $p(x)$ their marginal densities. The MI measures the amount of
+and $p(x)$ and $p(y)$ their marginal densities. The MI measures the amount of
 information $\mathbf{X}$ and $\mathbf{Y}$ share or, in other words, quantifies
 the reduction of uncertainty in $\mathbf{X}$ when knowing $\mathbf{Y}$.
 
@@ -438,7 +467,8 @@ with parameters
   \end{aligned}
 \end{equation}
 
-Furthermore, $\boldsymbol{\Sigma}_{\boldsymbol{\Theta}_1\mid\mathcal{D}_2}$ can
+\noindent Furthermore,
+$\boldsymbol{\Sigma}_{\boldsymbol{\Theta}_1\mid\mathcal{D}_2}$ can
 be recognized as the \emph{Schur complement} of the joint covariance matrix
 $\boldsymbol{\Sigma}_{\boldsymbol{\Theta}_1\mathcal{D}_2}$.
 
@@ -480,7 +510,7 @@ time $t$, we collect a measurement batch
 $\mathcal{D}^{new}=\{\mathbf{u}_{t:t+k}, \mathbf{z}_{t_{1:N}:{t+k}_{1:N}}\}$
 during $k$ timesteps and compute
 $p(\mathbf{\Theta}\mid\mathcal{D}^{info},\mathcal{D}^{new})$ using Gauss-Newton
-method with TQR updates. In a second step, if
+method with TQR updates and threshold $\epsilon$. In a second step, if
 $I(\mathbf{\Theta}\mid\mathcal{D}^{info};\mathcal{D}^{new})$ is larger
 than a user-defined threshold $\theta$, $\mathcal{D}^{new}$ is added to
 $\mathcal{D}^{info}$ and the estimate of $\mathbf{\Theta}$ is updated.
@@ -510,7 +540,7 @@ $t\leftarrow1$ \;
       \mathbf{z}_{t_{1:N}}\}$ \;
     $t \leftarrow t + 1$ \;
   }
-  \Comment*[h]{TQR minimization} \;
+  \Comment*[h]{TQR optimization with threshold $\epsilon$} \;
   $\hat{\boldsymbol{\mu}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}} \leftarrow
     \argmax_{\boldsymbol{\Theta},\mathcal{X},\mathcal{L}}
     p(\boldsymbol{\Theta}, \mathcal{X},\mathcal{L} \mid\mathcal{D}^{info},
@@ -530,8 +560,8 @@ $t\leftarrow1$ \;
 }
 \end{algorithm}
 
-Our method has been fully implemented in MATLAB. Taking into account the
-sparsity of the Jacobian matrix $\mathbf{H}$, the algorithmic complexity can
-be largely reduced in terms of memory footprint and computation. To this end, we
-have used the SuiteSparseQR~\cite{davis11algorithm} package for performing
-TQR optimization.\todo{a note on the algorithmic complexity}
+Given the structure of the model~\eqref{eqn:post_joint_factorized}, the
+Jacobian matrix $\mathbf{H}$ will be sparsely populated. Therefore, in order to
+obtain a tractable and scalable method, we adopt sparse matrices algorithms and
+data structures. The memory and computational costs are then $\mathcal{O}(n)$,
+where $n$ is the number of timesteps considered for optimization.
