--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -186,8 +186,8 @@ threshold that will recover the correct rank deficiency and therefore only
 optimize the observable parts. The threshold is application-specific and should
 be a function of the system noise. Obviously, at a certain level of noise, gaps
 in the singular values spectrum become indistinguishable. In our setup, we have
-determined the threshold empirically from the scaled system and set it to
-$\epsilon=0.013$.
+determined the threshold empirically from the scaled system
+\eqref{eqn:scaled_system} and set it to $\epsilon=0.013$.
 
 \begin{figure}[t]
 \centering
