--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -233,8 +233,8 @@ For this first example, Fig.~\ref{fig:straight-path-time} shows the mean
 computation time for some dataset sizes over 100 repetitions for one iteration
 of the Gauss-Newton algorithm using SVD or sparse QR decomposition on a
 quad-core desktop machine. It usually takes less than 10 iterations for the
-optimization to converge. The SVD method rapidly becomes prohibitive due to the
-exponential computation time.
+optimization to converge. Nevertheless, the SVD method rapidly becomes
+prohibitive due to the exponential computation time.
 
 \begin{figure}[t]
 \centering
