--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -260,6 +260,7 @@ different algorithms, namely an Extended Kalman Filter (EKF) similar
 to~\cite{martinelli06automatic}, a standard batch non-linear least squares
 method without regularization~\cite{kuemmerle11simultaneous}, and our TQR-MI
 approach, on the straight path scenario and on a well-behaved path with turns.
+We have repeated the experiments 100 times with the same initial conditions.
 
 \subsection{Real-world Data}
 
