--- a/papers/ivs13/src/introduction.tex
+++ b/papers/ivs13/src/introduction.tex
@@ -50,13 +50,12 @@ mirror the related concept of numerically rank-deficient matrices.
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{fig/slam_calib_it3.eps}
+\includegraphics[width=\columnwidth]{fig/straight-loop-path-result.eps}
 \caption{Exemplary output of our calibration algorithm (best viewed in
 color). The ground truth trajectory and landmark positions are shown in green
 and their respective estimates in blue. While dealing with degenerate cases, our
 method only selects batches of data that provide enough information to the
-estimator. In this example, the observed shift in the estimate comes from the
-absence of any prior information.}
+estimator.}
 \label{fig:calib_demo}
 \end{figure}
 
