--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -234,7 +234,7 @@ computation time for some dataset sizes over 100 repetitions for one iteration
 of the Gauss-Newton algorithm using SVD or sparse QR decomposition on a
 quad-core desktop machine. It usually takes less than 10 iterations for the
 optimization to converge. Nevertheless, the SVD method rapidly becomes
-prohibitive due to the exponential computation time.
+prohibitive due to the polynomial computation time.
 
 \begin{figure}[t]
 \centering
