--- a/papers/ivs13/bib/bibliography.bib
+++ b/papers/ivs13/bib/bibliography.bib
@@ -3302,6 +3302,19 @@
   timestamp = {2011.09.19}
 }
 
+@ARTICLE{gelman08objections,
+  author = {Andrew Gelman},
+  title = {Objections to {B}ayesian statistics},
+  journal = {Bayesian Analysis},
+  year = {2008},
+  volume = {3},
+  pages = {445-450},
+  number = {3},
+  file = {gelman08objections.pdf:gelman08objections.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.10.25}
+}
+
 @BOOK{gelman03bayesian,
   title = {Bayesian Data Analysis},
   publisher = {Chapman and Hall/CRC},
