--- a/papers/ivs13/bib/bibliography.bib
+++ b/papers/ivs13/bib/bibliography.bib
@@ -2928,6 +2928,19 @@
   timestamp = {2012.09.13}
 }
 
+@ARTICLE{fiore01efficient,
+  author = {Paul D. Fiore},
+  title = {Efficient Linear Solution of Exterior Orientation},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI)},
+  year = {2001},
+  volume = {23},
+  pages = {140-148},
+  number = {2},
+  file = {fiore01efficient.pdf:fiore01efficient.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.10.25}
+}
+
 @ARTICLE{fischler80random,
   author = {Martin A. Fischler and Robert C. Bolles},
   title = {Random Sample Consensus: A Paradigm for Model Fitting with Applications
